--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "tailwindcss": "^3.3.2",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
